# MAV3K

./: LICENSE
mav3k_description/: CMakeLists.txt  package.xml
mav3k_description/launch/: mav3k_upload.launch  view_model.launch
mav3k_description/launch/rviz/: model.rviz
mav3k_description/meshes/sensors/collision/: velodyne_vlp16_collision.stl
mav3k_description/meshes/vector_components/collision/: mav3k_base_collision.stl
mav3k_description/urdf/: mav3k.urdf.xacro  mav3k_accessories.urdf.xacro
mav3k_description/urdf/sensors/: hokuyo_uam_05lp.urdf.xacro
mav3k_description/urdf/vector_components/: mav3k_base.urdf.xacro
mav3k_simulator/mav3k_gazebo/: CMakeLists.txt  package.xml
mav3k_simulator/mav3k_gazebo/launch/: mav3k.launch  mav3k_test_zone.launch  sensor_filters.launch  spawn_controllers.launch
mav3k_simulator/mav3k_gazebo/models/bench/: model.config  model.sdf
mav3k_simulator/mav3k_gazebo/models/bench/meshes/: bench.dae
mav3k_simulator/mav3k_gazebo/models/cafe_beer/: model.config
mav3k_simulator/mav3k_gazebo/models/folding_table_4x2/: model.config
mav3k_simulator/mav3k_gazebo/models/pringles/: model.config
mav3k_simulator/mav3k_gazebo/models/roller_door/: model.config  model.sdf
mav3k_simulator/mav3k_gazebo/models/simpler_door/: model-1_3.sdf  model.config
mav3k_simulator/mav3k_gazebo/models/simpler_door_z_minus/: model-1_3.sdf  model.config
mav3k_simulator/mav3k_gazebo/models/vector_dev_floor/: model.sdf
mav3k_simulator/mav3k_gazebo/models/vector_dev_floor/meshes/: vector_dev_floor.dae  vector_dev_floor2.dae
mav3k_simulator/mav3k_gazebo/models/waypoint_panel/: model.config  model.sdf
mav3k_simulator/mav3k_gazebo/models/waypoint_panel/meshes/: waypointpanel.dae
mav3k_simulator/mav3k_gazebo/scripts/: sim_start_patch
mav3k_simulator/mav3k_gazebo_plugins/force_based_move_gazebo_plugin/: CMakeLists.txt  package.xml
mav3k_simulator/mav3k_gazebo_plugins/force_based_move_gazebo_plugin/include/force_based_move_gazebo_plugin/: gazebo_ros_force_based_move.h
mav3k_simulator/mav3k_gazebo_plugins/force_based_move_gazebo_plugin/src/: gazebo_ros_force_based_move.cpp
mav3k_simulator/mav3k_gazebo_plugins/mav3k_gazebo_plugins/: CMakeLists.txt  package.xml
mav3k_simulator/mav3k_sensor_filters/ira_laser_tools/: CMakeLists.txt  package.xml
mav3k_simulator/mav3k_sensor_filters/ira_laser_tools/cfg/: laserscan_multi_merger.cfg
mav3k_simulator/mav3k_sensor_filters/ira_laser_tools/src/: laserscan_multi_merger.cpp
mav3k_simulator/mav3k_sensor_filters/laserscan_to_pcl2/: CMakeLists.txt  nodelet_plugins.xml  package.xml
mav3k_simulator/mav3k_sensor_filters/laserscan_to_pcl2/include/laserscan_to_pcl2/: laserscan_to_pcl2.h
mav3k_simulator/mav3k_sensor_filters/laserscan_to_pcl2/src/: laserscan_to_pcl2_nodelet.cpp
mav3k_simulator/mav3k_sensor_filters/mav3k_sensor_filters/: CMakeLists.txt  package.xml
mav3k_simulator/mav3k_sensor_filters/pointcloud_to_laserscan/src/: laserscan_to_pointcloud_nodelet.cpp  pointcloud_to_laserscan_nodelet.cpp
mav3k_simulator/mav3k_sensor_filters/range_sensor_filters/: package.xml
mav3k_simulator/mav3k_sensor_filters/range_sensor_filters/src/: range_sensor_filters.cpp
mav3k_simulator/mav3k_simulator/: CMakeLists.txt  package.xml
si_utils/: package.xml
si_utils/scripts/: install_ds4_dep  laserscan_to_pcl2  node_delay_roslaunch
