<?xml version="1.0"?>
<package>
    <name>mav3k_description</name>
    <version>0.0.1</version>
    <description>Stanley Innovation MAV3K URDF descriptions</description>
    <maintainer email="dev@waypointrobotics.com">DEVELOPER</maintainer>
    <author>DEVELOPER</author>
    <url type="repository">https://github.com/waypoint_robotics</url>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roslaunch</build_depend>
    <run_depend>robot_state_publisher</run_depend>
    <run_depend>urdf</run_depend>
    <run_depend>xacro</run_depend>
    <run_depend>gazebo_plugins</run_depend>
    <run_depend>gazebo_ros</run_depend>
    <run_depend>gazebo_ros_control</run_depend>
    <run_depend>hector_gazebo_plugins</run_depend>


    <export>
    </export>
</package>
