<package>
    <name>mav3k_gazebo_plugins</name>
    <version>0.0.1</version>
    
    <description>Simulation plugins related to vector</description>
    <maintainer email="dev@waypointrobotics.com">DEVELOPER</maintainer>
    <author></author>
    <url type="repository">https://github.com/WaypointRobotics</url>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    
    <run_depend>gazebo_force_based_move</run_depend>

    <export>
        <metapackage/>
    </export>
</package>
