<package>
    <name>laserscan_to_pcl2</name>
    <version>0.0.1</version>
    <description>Simple nodelet wrapper for the projector in laser_geometry</description>
    
    <maintainer email="nickv@waypointrobotics.com">Nicolas Varas</maintainer>
    <author>Nicolas Varas</author>
    <url type="repository">https://github.com/waypointrobotics</url>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    
    <!-- <build_depend>roslaunch</build_depend> -->
    <build_depend>roscpp</build_depend>
    <build_depend>nodelet</build_depend>
    <build_depend>laser_geometry</build_depend>
    
    <run_depend>roscpp</run_depend>
    <run_depend>nodelet</run_depend>
    <run_depend>laser_geometry</run_depend>

    <export>
        <nodelet plugin="${prefix}/nodelet_plugins.xml" />
    </export>

</package>
